[tool.poetry]
name = "receipts"
version = "0.1.0"
description = ""
authors = ["seiilaa <vseiilaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
